--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,36 @@
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+
 .App {
   width: 100%;
   height: 100%;
 
   .navbar {
-    display: block;
-    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    min-height: 8vh;
+    align-items: center;
+    div {
+      font-size: 45px;
+      color: #6fdfdf;
+    }
+    .nav-list {
+      display: flex;
+      justify-content: space-evenly;
+      width: 25%;
+      list-style: none;
+      a {
+        text-decoration: none;
+        font-size: 20px;
+        font-weight: bold;
+        text-transform: capitalize;
+        color: #dbd3d3;
+      }
+    }
   }
   .content {
     display: flex;
