--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -7,7 +7,7 @@ nav {
   display: flex;
   width: 100%;
   justify-content: space-between;
-  background-color: #423129;
+  background-color: #0a192f;
   min-height: 10vh;
   align-items: center;
   .navbar {
@@ -15,7 +15,7 @@ nav {
     width: 95%;
     justify-content: space-between;
     .brand {
-      color: #bcdbd9;
+      color: #abf3f3;
       font-weight: bold;
       padding-left: 15px;
     }
@@ -23,14 +23,14 @@ nav {
       display: flex;
       justify-content: space-between;
       width: 30%;
-
+      font-size: 20px;
       li {
         list-style: none;
       }
       a {
         font-weight: bold;
         letter-spacing: 2px;
-        color: #bcdbd9;
+        color: #abf3f3;
         text-decoration: none;
       }
     }
@@ -45,7 +45,7 @@ nav {
     cursor: pointer;
     div {
       justify-content: center;
-      background-color: #ebecec;
+      background-color: #175854;
       width: 60px;
       height: 3px;
       align-content: center;
@@ -74,17 +74,19 @@ nav {
         display: flex;
         top: 10vh;
         right: 0px;
-        background-color: #423129;
+        background-color: #d9dfde;
         flex-direction: column;
-        height: 92vh;
+        height: 90vh;
         align-items: center;
         justify-content: center;
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
         overflow-x: hidden;
+        z-index: 2;
         li {
           justify-content: center;
           margin: 20px;
+          margin-top: 10px;
           opacity: 0;
         }
       }
