--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -45,7 +45,7 @@ nav {
     cursor: pointer;
     div {
       justify-content: center;
-      background-color: #175854;
+      background-color: #abf3f3;
       width: 60px;
       height: 3px;
       align-content: center;
@@ -74,7 +74,7 @@ nav {
         display: flex;
         top: 10vh;
         right: 0px;
-        background-color: #d9dfde;
+        background-color: #0a192f;
         flex-direction: column;
         height: 90vh;
         align-items: center;
