--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -1,78 +1,65 @@
 .home {
   text-align: center;
   margin: auto;
-  padding-top: 100px;
   font-size: 45px;
   color: #8892b0;
-  background: #0a192f;
-  font-family: cursive;
-  height: 90vh;
-  font-weight: bolder;
-  text-transform: capitalize !important ;
-  .trans:hover {
-    transform: translate(10%, 25%);
-    transition: transform 2s ease;
-    color: aqua;
-  }
-  .trans {
-    transform: translate(0px);
-    transition: transform 2s ease;
-    transition-delay: 1s;
-  }
-  #hello {
-    color: rgb(0, 255, 191);
-    //color: #d639bc;
-  }
-  #name {
-    font-family: "Special Elite", cursive;
-    //color: beige;
-  }
-  .particles {
-    opacity: random(100) / 100;
-    position: absolute;
-    border-radius: 50%;
-  }
-}
-@for $i from 1 through 30 {
-  @keyframes particles-animation-#{$i} {
-    100% {
-      transform: translate3d(
-        (random(90) * 1vw),
-        (random(90) * 1vh),
-        (random(100) * 1px)
-      );
+
+  .container {
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    display: block;
+    padding-top: 150px;
+    background: #0a192f;
+    font-family: cursive;
+    height: 90vh;
+    font-weight: bolder;
+    text-transform: capitalize !important ;
+    .trans:hover {
+      transform: translate(10%, 25%);
+      transition: transform 2s ease;
+      color: aqua;
     }
-  }
-  .particles:nth-child(#{$i}) {
-    animation: particles-animation-#{$i} 30s infinite;
-    animation-delay: -$i * 0.3s;
-    $size: random(5) + 10 + px;
-    height: $size;
-    width: $size;
-    background: hsl(random(360), 90%, 70%);
-    transform: translate3d(
-      (random(90) * 1vw),
-      (random(90) * 1vh),
-      (random(100) * 1px)
-    );
+    .trans {
+      transform: translate(0px);
+      transition: transform 2s ease;
+      transition-delay: 1s;
+      justify-items: center;
+      align-items: center;
+      margin: auto;
+    }
+    #hello {
+      color: rgb(0, 255, 191);
+      //color: #d639bc;
+    }
+    #name {
+      font-family: "Special Elite", cursive;
+      //color: beige;
+    }
   }
 }
 
 @media screen and (max-width: 650px) {
   .home {
     font-size: 35px;
-    padding-top: 120px;
+    .container {
+      padding-top: 150px;
+    }
   }
 }
 @media screen and (max-width: 480px) {
   .home {
     font-size: 25px;
-    padding-top: 120px;
+    .container {
+      padding-top: 150px;
+    }
   }
 }
 @media screen and (max-width: 342px) {
   .home {
     font-size: 20px;
-    padding-top: 120px;
+    .container {
+      padding-top: 150px;
+    }
   }
 }
