--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -1,40 +1,49 @@
 .home {
   text-align: center;
   margin: auto;
-  font-size: 45px;
+  font-size: 35px;
   color: #8892b0;
-
-  .container {
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-    display: block;
-    padding-top: 150px;
-    background: #0a192f;
-    font-family: cursive;
+  .nav-area {
+    background: #061d29;
     height: 90vh;
-    font-weight: bolder;
-    text-transform: capitalize !important ;
-    .trans:hover {
-      transform: translate(10%, 25%);
-      transition: transform 2s ease;
-      color: aqua;
-    }
-    .trans {
-      transform: translate(0px);
-      transition: transform 2s ease;
-      transition-delay: 1s;
-      justify-items: center;
+    .container {
+      width: 50%;
+      height: 55%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
       align-items: center;
       margin: auto;
+      padding-top: 180px;
+      .trans:hover {
+        transform: translate(10%, 25%);
+        transition: transform 2s ease;
+        color: aqua;
+      }
+      .trans {
+        transform: translate(0px);
+        transition: transform 2s ease;
+        transition-delay: 1s;
+        justify-items: center;
+        align-items: center;
+        margin: auto;
+      }
+      #hello {
+        width: 100%;
+        color: rgb(0, 255, 191);
+        text-align: left;
+        padding-left: 32px;
+      }
+      #name {
+        font-family: "Special Elite", cursive;
+        //color: beige;
+      }
     }
-    #hello {
-      color: rgb(0, 255, 191);
-      //color: #d639bc;
-    }
-    #name {
-      font-family: "Special Elite", cursive;
-      //color: beige;
+    .container::after {
+      content: " ";
+      display: block;
+      border: 2px solid blue;
+      border-width: 0 5px 0 0;
     }
   }
 }
