--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -40,10 +40,8 @@
       }
     }
     .container::after {
-      content: " ";
-      display: block;
-      border: 2px solid blue;
-      border-width: 0 5px 0 0;
+      content: " _";
+      border-right: 2px solid yellow;
     }
   }
 }
