--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -4,7 +4,7 @@
   font-size: 35px;
   color: #8892b0;
   .nav-area {
-    background: #e9a2d7;
+    background: #0d5355;
     height: 90vh;
     img {
       width: 150px;
