--- a/src/components/about.scss
+++ b/src/components/about.scss
@@ -1,7 +1,7 @@
 #about {
   height: 80vh;
   width: 100%;
-  background: #ffffff;
+  background: #2e4c4e;
   display: flex;
   flex-direction: column;
   margin: auto;
