--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -4,8 +4,9 @@
   font-size: 35px;
   color: #8892b0;
   .nav-area {
-    background: #ffffff;
+    background: #64eee2;
     height: 90vh;
+    clip-path: polygon(0 0, 90% 0, 100% 50%, 0 95%);
     img {
       width: 150px;
       height: 150px;
