--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -4,9 +4,8 @@
   font-size: 35px;
   color: #8892b0;
   .nav-area {
-    background: #87f7cc;
+    background: #d9f1e8;
     height: 90vh;
-    clip-path: polygon(0 0, 100% 0, 100% 70%, 0 100%);
     img {
       width: 150px;
       height: 150px;
