--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -3,81 +3,46 @@
   margin: auto;
   font-size: 35px;
   color: #8892b0;
+  height: 100vh;
   .nav-area {
-    background: #d9f1e8;
-    height: 90vh;
+    background: #1808a8;
+    height: 100%;
     img {
-      width: 150px;
       height: 150px;
+      width: 150px;
       border-radius: 50%;
-      margin-top: 50px;
-      margin-bottom: 0px;
+      z-index: 2;
+      position: relative;
+      bottom: -30px;
+      top: 20px;
+      //box-shadow: 0px 0px 2px 2px gray;
     }
-    .container {
-      width: 50%;
-      height: 55%;
+    .profile {
+      position: relative;
+      width: 35%;
+      height: 40%;
+      margin: auto;
+      margin-top: 0px;
+      padding-top: 20px;
+      background: #240f16;
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      justify-content: flex-start;
+      align-items: center;
+      clip-path: polygon(0 0, 100% 0, 100% 80%, 0 55%);
+      box-shadow: 0px 0px 0.5px 1px #5c5a5a;
+      border-radius: 10px;
+    }
+    .socialButtons {
+      width: 35%;
+      display: flex;
+      justify-content: space-around;
       align-items: center;
       margin: auto;
-      padding-top: 180px;
-
-      .trans:hover {
-        transform: translate(10%, 25%);
-        transition: transform 2s ease;
-        color: aqua;
+      margin-top: -30px;
+      button {
+        width: 20%;
       }
-      .trans {
-        transform: translate(0px);
-        transition: transform 2s ease;
-        transition-delay: 1s;
-        justify-items: center;
-        align-items: center;
-        margin: auto;
-      }
-      #hello {
-        width: 100%;
-        color: rgb(0, 255, 191);
-        text-align: left;
-        padding-left: 32px;
-      }
-      #name {
-        font-family: "Special Elite", cursive;
-      }
-    }
-  }
-}
-
-@media screen and (max-width: 650px) {
-  .home {
-    font-size: 35px;
-    .container {
-      padding-top: 150px;
-    }
-  }
-}
-@media screen and (max-width: 480px) {
-  .home {
-    font-size: 25px;
-    .nav-area {
-      .container {
-        width: 80%;
-        height: 50%;
-        padding-top: 165px;
-        #name {
-          font-size: 20px;
-        }
-      }
-    }
-  }
-}
-@media screen and (max-width: 375px) {
-  .home {
-    font-size: 20px;
-    .container {
-      width: 80%;
-      padding-top: 150px;
     }
   }
 }
