--- a/src/components/Particles.scss
+++ b/src/components/Particles.scss
@@ -2,13 +2,14 @@
   opacity: random(100) / 100;
   position: absolute;
   border-radius: 50%;
+  z-index: 1;
 }
 @for $i from 1 through 80 {
   @keyframes particles-animation-#{$i} {
     100% {
       transform: translate3d(
         (random(90) * 1vw),
-        (random(90) * 1vh),
+        (random(70) * 1vh),
         (random(100) * 1px)
       );
     }
@@ -22,7 +23,7 @@
     background: hsl(random(360), 70%, 50%);
     transform: translate3d(
       (random(90) * 1vw),
-      (random(90) * 1vh),
+      (random(100) * 1vh),
       (random(100) * 1px)
     );
   }
