--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -5,7 +5,7 @@
   color: #8892b0;
   height: 100vh;
   .nav-area {
-    background: #1808a8;
+    background: #001c29;
     height: 100%;
     img {
       height: 150px;
