--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -15,7 +15,7 @@
       position: relative;
       bottom: -30px;
       top: 20px;
-      //box-shadow: 0px 0px 2px 2px gray;
+      box-shadow: 0px 0px 2px 2px gray;
     }
     .profile {
       position: relative;
