--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -18,6 +18,7 @@ nav {
       color: #abf3f3;
       font-weight: bold;
       padding-left: 15px;
+      cursor: pointer;
     }
     .navlist {
       display: flex;
